# pynonthermal

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  quickstart.ipynb  renovate.json  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  black.yml  depapprove.yml  deploypypi.yml  deploytestpypi.yml  linter.yml  pytest.yml  pythonapp.yml
pynonthermal/: __init__.py  axelrod.py  base.py  collion.py  constants.py  excitation.py  spencerfano.py
pynonthermal/data/: collion-AR1985.txt  collion.txt  nist_ionization.txt.zst
pynonthermal/data/artis_files/: adata.txt  compositiondata.txt
pynonthermal/data/artis_files/atomic_data_logs/: fe1.txt  fe2.txt  fe3.txt  fe4.txt  fe5.txt  he1.txt  he2.txt  o1.txt  o2.txt  o3.txt  o4.txt
pynonthermal/tests/: test_sfsolve.py
